<resources>
    <string name="app_name">Ứng dụng đọc truyện</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tab1">Tab1</string>
    <string name="title_activity_tab2">Tab2</string>
    <string name="title_activity_tab3">Tab3</string>
    <string name="title_activity_tab4">Tab4</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="update">Update</string>
    <string name="desc">cover art</string>
    <string name="manga_name">Tên truyện:</string>
    <string name="manga_author">Tác giả:</string>
    <string name="manga_genre">Thể loại:</string>
    <string name="manga_chapter">Chapter(s):</string>
    <string name="manga_status">Status:</string>
    <string name="manga_summary">Tóm tắt:</string>
    <string name="add_manga">Add Manga</string>
    <string name="search_hint">Search mangas</string>
    <string name="search_settings">Search Mangas</string>
    <string-array name="nav_drawer_items">
        <item>Trang chủ</item>
        <item>Danh sách truyện</item>
        <item>Truyện đã tải</item>
        <item>Danh sách yêu thích</item>
        <item>Truyện theo RSS</item>
        <item>Mở truyện từ thẻ nhớ</item>
        <item>Trợ giúp</item>
        <item>Cài đặt</item>
        <item>Giới thiệu</item>
        <item>Khích lệ chúng tôi</item>
    </string-array>
    <string name="title_activity_rss_book_index">RssBook_index</string>
    <string name="title_activity_rss_book__detail">RssBook_Detail</string>
    <string name="title_activity_rss__webview">Truyện tranh điện tử</string>
    <string name="title_activity_manga_infor">MangaInforActivity</string>
    <string name="title_activity_open_file">OpenFileActivity</string>
    <string name="title_activity_read_manga">ReadMangaActivity</string>
    <string name="title_activity_ecomic__type">Ecomic_Type</string>
    <string name="title_activity_read_manga_online">ReadMangaOnlineActivity</string>
    <string-array name="images_arrays">
        <item>http://1.bp.blogspot.com/-lsZ6EyY2lMk/VFt_fpb6G6I/AAAAAAABgQ8/dnyNSbhwHOw/s0/vechai-01.jpg</item>
        <item>http://1.bp.blogspot.com/-yxYJrWwG_fo/VFt_hoK8slI/AAAAAAABgRE/B_Fclgkk7Vw/s0/vechai-02_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-fAVFtYJWMbM/VFt_j00gZnI/AAAAAAABgRM/VryAujsKHT0/s0/vechai-03_copy.jpg</item>
        <item>http://1.bp.blogspot.com/--P4Dyng9s0U/VFt_mF_ig4I/AAAAAAABgRU/xkw39rBT9gw/s0/vechai-04_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-avi4eU2A0Jg/VFt_oLdfIMI/AAAAAAABgRc/cAKBV9jUEbc/s0/vechai-05_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-D6S3-w6-nsQ/VFt_qtD2nUI/AAAAAAABgRk/LCLq2Q9TvQk/s0/vechai-06_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-l3pc4gGVGkU/VFt_ss0M9RI/AAAAAAABgRs/MgP18c2rSjw/s0/vechai-07_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-983tLsCCVKI/VFt_uhS8KUI/AAAAAAABgR0/Yunkl40uYWM/s0/vechai-08_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-J-cFRtclNvY/VFt_woFevYI/AAAAAAABgR8/CoPIwrysMmo/s0/vechai-09_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-3bz4Ejg4znM/VFt_yqBqDnI/AAAAAAABgSE/FubkcAumtPs/s0/vechai-10_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-CGo2x1haSKw/VFt_0gjj2oI/AAAAAAABgSM/3jA47YhETvM/s0/vechai-11_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-z4jipVe9hFQ/VFt_2uvr5aI/AAAAAAABgSU/EOJVLIlGfg4/s0/vechai-12_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-EI3Rx8ajp1s/VFt_5qrcYyI/AAAAAAABgSc/uDGb6FbBkNE/s0/vechai-13_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-HfrZwf3OqC8/VFt_8bMmmQI/AAAAAAABgSk/qN_u7NnUqZw/s0/vechai-14_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-dJriqom1Cn0/VFt__pmkx6I/AAAAAAABgSs/c6DUVNuvIvw/s0/vechai-15_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-SLXOdpJNWyo/VFuAHBzttmI/AAAAAAABgS0/09kMhKIqq38/s0/vechai-16_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-kVtvl4jB9J8/VFuAJFq4XpI/AAAAAAABgS8/CdSRFVXOmGI/s0/vechai-17_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-wQ0ZKpKWklI/VFuALZWnlTI/AAAAAAABgTE/dLSA0_iHOvg/s0/vechai-18_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-3H5GZfRTHfo/VFuANVmlu_I/AAAAAAABgTM/SoANWNKpy0k/s0/vechai-19_copy.jpg</item>
        <item>http://1.bp.blogspot.com/--4O3916aSKE/VFuAP0C4PkI/AAAAAAABgTU/jr05DqyniTs/s0/vechai-20_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-TIN37hRrd88/VFuASm5dTkI/AAAAAAABgTc/VqX7-yh8tw0/s0/vechai-21_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-8t1zIxqM1dA/VFuOR7MhgSI/AAAAAAABgZY/MXcF82n3UC4/s0/vechai-22_copy.jpg</item>
        <item>http://1.bp.blogspot.com/-IqMAfgCflm0/VFuAWAiQJRI/AAAAAAABgTs/aABICSb91Ik/s0/vechai-23.jpg</item>
    </string-array>
    <string name="title_activity_activity_error_network">ActivityErrorNetwork</string>
    <string name="title_activity_list_like_manga">ListLikeMangaActivity</string>
    <string name="title_activity_activity_infomation">Thông tin</string>
    <string name="title_activity_activity_setting">Cài đặt</string>
    <string name="title_activity_list_download">ListDownloadActivity</string>
</resources>