<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="vertical"
     >"
<ScrollView 
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        
        <ImageView
           android:id="@+id/mangaMenuCover"
           android:layout_width="match_parent"
           android:layout_height="150dp"
           android:layout_marginTop="20dip"
          
           android:contentDescription="@string/desc"/>

        <TextView
            android:layout_below = "@id/mangaMenuCover"
            android:id="@+id/info0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manga_name"
            android:textStyle="bold"
            android:layout_marginTop="20dip"/>
        
        <TextView
            android:layout_below = "@id/info0"
            android:id="@+id/infoName"
            android:layout_width="wrap_content"
            android:text="tên truyện"
            android:layout_height="wrap_content"/>
        
        <TextView
            android:layout_below = "@id/infoName"
            android:id="@+id/info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manga_author"
            android:textStyle="bold"
            android:layout_marginTop="15dip"/>
        
        <TextView
            android:layout_below = "@id/info1"
            android:id="@+id/infoArthur"
            android:text="tác giả"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <TextView
            android:layout_below = "@id/infoArthur"
            android:id="@+id/info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manga_genre"
            android:textStyle="bold"
            android:layout_marginTop="15dip"/>
        
        <TextView
            android:layout_below = "@id/info2"
            android:id="@+id/infoGenre"
            android:text="Thể loại"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <TextView
            android:layout_below = "@id/infoGenre"
            android:id="@+id/info3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manga_summary"
            android:textStyle="bold"
            android:layout_marginTop="15dip"/>
        
        
        
        <TextView
            android:layout_below = "@id/info3"
            android:id="@+id/infoSummary"
            android:text="summary"
            android:singleLine="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <Button
            android:layout_below="@id/infoSummary"
            android:id="@+id/infoButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:text="@string/add_manga"
            />
        <ListView 
            android:layout_below="@id/infoButton"
            android:id="@+id/listChap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>"
        
    </LinearLayout >    
      
</ScrollView>
</LinearLayout>